#27 added hungarian business register

--- a/flaskinventory/templates/guides/resources.html
+++ b/flaskinventory/templates/guides/resources.html
@@ -32,6 +32,7 @@ All resources are curated by the WP3 Team and the list is updated irregularly.
 - [FirmenABC](https://www.firmenabc.at/): Information about companies / registrated businesses (Austria)
 - [BCE](https://kbopub.economie.fgov.be/kbopub/zoeknaamfonetischform.html): Company registry, lookup financial statements, audited accounts (Belgium)
 - [KEK-Online](https://www.kek-online.de/service/verlinkungen): Ownership database of news sources (Germany)
+- [Hungarian Business Register](https://www.e-cegjegyzek.hu/): Company Register, information on date of incorporation, subsidiaries, etc (Hungary)
 - [Find and update company information](https://find-and-update.company-information.service.gov.uk/): Company registry, lookup financial statements, date of incorporation, ownerships of companies (United Kingdom)
 
 ## Press Councils
