--- a/flaskinventory/templates/review/detail.html
+++ b/flaskinventory/templates/review/detail.html
@@ -6,7 +6,7 @@
         <h1>Review Mode</h1>
     </div>
     <div>
-        <form method="POST" action="{{ url_for('review.submit') }}">
+        <form method="POST" action="{{ url_for('review.submit', **request.args) }}">
             {{ review_actions.hidden_tag() }}
             <div class="btn-group" role="group" aria-label="Review Actions">
                 {{ review_actions.reject(class="btn btn-danger") }}
