--- a/flaskinventory/templates/review/overview.html
+++ b/flaskinventory/templates/review/overview.html
@@ -2,8 +2,7 @@
 <div class="border rounded p-3">
     <h3 class="mb-4">Entries for Review</h3>
 
-    <form method="POST" action="">
-        {{ form.hidden_tag() }}
+    <form method="GET" action="{{ url_for('review.overview') }}">
         <div class="row mb-4 align-items-end">
             <div class="col-4">
                 {{ form.entity.label(class="form-label") }}
@@ -20,7 +19,7 @@
                 {{ form.country(class="form-select") }}
             </div>
             <div class="col-4">
-                {{ form.submit(class="btn btn-primary me-4") }}
+                <button class="btn btn-primary mx-2" type="submit">Filter</button>
             </div>
         </div>
     </form>
@@ -53,7 +52,7 @@
                     <td>{% if entry.entry_added.get("entry_added|timestamp") %}{{ entry.entry_added.get("entry_added|timestamp").strftime('%d-%m-%Y') }}{% endif %}</td>
                     <td>{{ entry.entry_added.get("user_displayname") }}</td>
                     <td>
-                        <div class="btn-group btn-group-sm" role="group"><a class="btn btn-primary" href="{{ url_for('review.entry', uid=entry.get('uid'))}}">Review</a></div>
+                        <div class="btn-group btn-group-sm" role="group"><a class="btn btn-primary" href="{{ url_for('review.entry', uid=entry.get('uid'), **request.args)}}">Review</a></div>
                     </td>
             </tr>
             {% endfor %} {% endif %}
