#27 added EU register and czech register

--- a/flaskinventory/templates/guides/resources.html
+++ b/flaskinventory/templates/guides/resources.html
@@ -28,10 +28,12 @@ All resources are curated by the WP3 Team and the list is updated irregularly.
 - [Media Ownership Monitor](https://mom-rsf.org/en/): Information about media ownership, reporters without borders (Global)
 - [OpenCorporates](https://opencorporates.com/): Large record of company registration data (Global)
 - [Media Info](https://media.info/): Information about media companies (UK, Ireland, Australia)
+- [Business Registers in EU Countries](https://e-justice.europa.eu/106/EN/business_registers_in_eu_countries): Official overview of webportals for company register information (EU)
 - [Aurelia](https://aurelia.bvdinfo.com/): Detailed information about companies: employees, turnover, date of incorporation, etc. (Austria)
 - [FirmenABC](https://www.firmenabc.at/): Information about companies / registrated businesses (Austria)
 - [BCE](https://kbopub.economie.fgov.be/kbopub/zoeknaamfonetischform.html): Company registry, lookup financial statements, audited accounts (Belgium)
 - [Bulgarian Business Register](https://portal.registryagency.bg/CR/en/Reports/VerificationPersonOrg): Commercial register and register of non-profit legal entities (Bulgaria)
+- [Czech Public Register](https://or.justice.cz/ias/ui/rejstrik): Information about companies, associations, trade unions, etc. (Czech Republic)
 - [KEK-Online](https://www.kek-online.de/service/verlinkungen): Ownership database of news sources (Germany)
 - [Hungarian Business Register](https://www.e-cegjegyzek.hu/): Company Register, information on date of incorporation, subsidiaries, etc (Hungary)
 - [Find and update company information](https://find-and-update.company-information.service.gov.uk/): Company registry, lookup financial statements, date of incorporation, ownerships of companies (United Kingdom)
