--- a/flaskinventory/templates/sidebar_recent.html
+++ b/flaskinventory/templates/sidebar_recent.html
@@ -1,4 +1,4 @@
-<div class="d-flex flex-column align-items-stretch bg-white" style="width: 380px;">
+<div class="d-flex flex-column align-items-stretch bg-white">
     <a href="#" class="d-flex align-items-center flex-shrink-0 p-3 link-dark text-decoration-none border-bottom">
         <span class="fs-5 fw-semibold">Recent Entries</span>
     </a>
@@ -6,10 +6,16 @@
         {% for item in recent %}
         <a href="{{ url_for('view.view_uid', uid=item.get('uid'))}}" class="list-group-item list-group-item-action py-1 lh-tight">
             <div class="d-flex w-100 align-items-center justify-content-between">
-                <strong class="mb-1 text-truncate">{{ item.name }} {{ item.title }} {% if item.get('channel') %}({{item.get('channel')}}){% endif %}</strong>
-                <small class="text-muted">{{ item.creation_date.strftime('%d&nbsp;%b')|safe }}</small>
+                <strong class="mb-1 text-truncate">
+                    {{ item.name }} {{ item.title }} {% if item.get('channel') %}({{item.get('channel')}}){% endif %}
+                </strong>
+                <small class="text-muted">
+                    {{ item.creation_date.strftime('%d&nbsp;%b')|safe }}
+                </small>
             </div>
-            <div class="col-10 mb-1 small">{{ item.get('type')[0] }}{% if item.get('country') %}, {{ item.country }}{% endif %}</div>
+            <div class="col-10 mb-1 small">
+                {{ item.get('type')[0] }}{% if item.get('country') %}, {{ item.country }}{% endif %}
+            </div>
         </a>
         {% endfor %} 
 
