#27 added italian circulation

--- a/flaskinventory/templates/guides/resources.html
+++ b/flaskinventory/templates/guides/resources.html
@@ -19,8 +19,9 @@ All resources are curated by the WP3 Team and the list is updated irregularly.
 - [Media Analyse](https://www.media-analyse.at/): Reach per print newspaper (Austria)
 - [CIM](https://www.cim.be/): Information about media circulation and reach (Belgium)
 - [Danske Medier](https://danskemedier.dk/branchefakta/medieforbrug/oplagskontrol/): Information about media circulation and reach (Denmark)
+- [Media Audit Finland](https://mediaauditfinland.fi/): Information about media circulation and reach (Finl(and)
 - [IVW](https://www.ivw.de/): Circulation of print media (Germany)
-- [Media Audit Finland](https://mediaauditfinland.fi/): Information about media circulation and reach (Finland)
+- [ADS](https://www.adsnotizie.it/): Circulation of media (Italy)
 
 ## Media Organizations and Ownership
 
