#27 added media db

--- a/flaskinventory/templates/guides/resources.html
+++ b/flaskinventory/templates/guides/resources.html
@@ -51,6 +51,7 @@ All resources are curated by the WP3 Team and the list is updated irregularly.
 ## Miscellaneous Information about Media
 
 - [Eurotopics](https://www.eurotopics.net/): News aggregator and information about media selected outlets (EU)
+- [MediaDB](https://www.mediadb.eu/): Information about the media landscape in German (EU)
 - [DieMedien.at](https://diemedien.at/): Background information about media (Austria)
 {% endfilter %}
         
