--- a/flaskinventory/templates/guides/resources.html
+++ b/flaskinventory/templates/guides/resources.html
@@ -19,7 +19,7 @@ All resources are curated by the WP3 Team and the list is updated irregularly.
 - [Media Analyse](https://www.media-analyse.at/): Reach per print newspaper (Austria)
 - [CIM](https://www.cim.be/): Information about media circulation and reach (Belgium)
 - [Danske Medier](https://danskemedier.dk/branchefakta/medieforbrug/oplagskontrol/): Information about media circulation and reach (Denmark)
-- [Media Audit Finland](https://mediaauditfinland.fi/): Information about media circulation and reach (Finl(and)
+- [Media Audit Finland](https://mediaauditfinland.fi/): Information about media circulation and reach (Finland)
 - [IVW](https://www.ivw.de/): Circulation of print media (Germany)
 - [ADS](https://www.adsnotizie.it/): Circulation of media (Italy)
 
@@ -31,7 +31,7 @@ All resources are curated by the WP3 Team and the list is updated irregularly.
 - [Media Info](https://media.info/): Information about media companies (UK, Ireland, Australia)
 - [Business Registers in EU Countries](https://e-justice.europa.eu/106/EN/business_registers_in_eu_countries): Official overview of webportals for company register information (EU)
 - [Aurelia](https://aurelia.bvdinfo.com/): Detailed information about companies: employees, turnover, date of incorporation, etc. (Austria)
-- [FirmenABC](https://www.firmenabc.at/): Information about companies / registrated businesses (Austria)
+- [FirmenABC](https://www.firmenabc.at/): Information about companies / registered businesses (Austria)
 - [BCE](https://kbopub.economie.fgov.be/kbopub/zoeknaamfonetischform.html): Company registry, lookup financial statements, audited accounts (Belgium)
 - [Bulgarian Business Register](https://portal.registryagency.bg/CR/en/Reports/VerificationPersonOrg): Commercial register and register of non-profit legal entities (Bulgaria)
 - [Czech Public Register](https://or.justice.cz/ias/ui/rejstrik): Information about companies, associations, trade unions, etc. (Czech Republic)
