--- a/flaskinventory/templates/view/country.html
+++ b/flaskinventory/templates/view/country.html
@@ -28,9 +28,9 @@
             <dt class="col-sm-3 mb-4"><h5>Summary</h5></dt>
             <dd class="col-sm-9 mb-4"><small class="text-muted">Shows how many of the sources and organizations listed in this inventory are associated with this country.</small></dd>
             <dt class="col-sm-3">Sources</dt>
-            <dd class="col-sm-9"><a href="{{ url_for('view.advanced_query') }}">{{ entry.num_sources }}</a></dd>
+            <dd class="col-sm-9"><a href="{{ url_for('view.query', entity='Source', country=entry.uid) }}">{{ entry.num_sources }}</a></dd>
             <dt class="col-sm-3">Organizations</dt>
-            <dd class="col-sm-9"><a href="{{ url_for('view.advanced_query') }}">{{ entry.num_orgs }}</a>
+            <dd class="col-sm-9"><a href="{{ url_for('view.query', entity='Organization', country=entry.uid) }}">{{ entry.num_orgs }}</a>
             </dd>
         </dl>
     </div>
