--- a/flaskinventory/templates/add/newsource.html
+++ b/flaskinventory/templates/add/newsource.html
@@ -202,7 +202,7 @@
                         <option value="" selected>Choose or add other</option>
                         <option value="politics">Politics</option>
                         <option value="society">Society & Panorama</option>
-                        <option value="economy">Economy, Finance & Stocks</option>
+                        <option value="economy">Business, Economy, Finance & Stocks</option>
                         <option value="religion">Religion</option>
                         <option value="science">Science & Technology</option>
                         <option value="media">Media</option>
