--- a/flaskinventory/templates/layout.html
+++ b/flaskinventory/templates/layout.html
@@ -33,9 +33,9 @@
         $SCRIPT_ROOT = {{ request.script_root|tojson|safe }};
     </script>
     {% if title %}
-    <title>WP3 Inventory - {{ title }}</title>
+    <title>{{ title }} | OPTED WP3 Inventory</title>
     {% else %}
-    <title>WP3 Inventory</title>
+    <title>OPTED WP3 Inventory</title>
     {% endif %}
 </head>
 
