#67 options now change

--- a/flaskinventory/templates/add/newsource.html
+++ b/flaskinventory/templates/add/newsource.html
@@ -390,27 +390,27 @@
                 {{ make_researchtip('Deactivate your ad blocker if applicable. Also make sure to look for ‘native ads’!') }}
             </p>
 
-            <div class="form-check">
+            <div class="form-check" id="form-check-contains-ads-1">
                 <input class="form-check-input" type="radio" name="contains_ads" id="contains_ads1" value="yes" aria-describedby="contains-ads-feedback" required>
                 <label class="form-check-label" for="contains_ads1">
                                Yes, for all audiences
                             </label>
             </div>
-            <div class="form-check">
-                <input class="form-check-input" type="radio" name="contains_ads" id="contains_ads3" value="non subscribers" aria-describedby="contains-ads-feedback" required>
-                <label class="form-check-label" for="contains_ads3">
+            <div class="form-check" id="form-check-contains-ads-2">
+                <input class="form-check-input" type="radio" name="contains_ads" id="contains_ads2" value="non subscribers" aria-describedby="contains-ads-feedback" required>
+                <label class="form-check-label" for="contains_ads2">
                                 Yes, but not for paying users
 
                             </label>
             </div>
-            <div class="form-check">
-                <input class="form-check-input" type="radio" name="contains_ads" id="contains_ads2" value="no" aria-describedby="contains-ads-feedback" required>
-                <label class="form-check-label" for="contains_ads2">
+            <div class="form-check" id="form-check-contains-ads-3">
+                <input class="form-check-input" type="radio" name="contains_ads" id="contains_ads3" value="no" aria-describedby="contains-ads-feedback" required>
+                <label class="form-check-label" for="contains_ads3">
                                 No, not at all
                             </label>
             </div>
             
-            <div class="form-check">
+            <div class="form-check" id="form-check-contains-ads-4">
                 <input class="form-check-input" type="radio" name="contains_ads" id="contains_ads4" value="none" aria-describedby="contains-ads-feedback" required>
                 <label class="form-check-label" for="contains_ads4">
                                 Don't know
