--- a/flaskinventory/templates/view/rejected.html
+++ b/flaskinventory/templates/view/rejected.html
@@ -8,11 +8,6 @@
     <div class="w-100">
         <h2>{{ entry.name }} <small class="fs-6 mx-4 text-muted">({{ entry.uid }})</small></h2>
     </div>
-    <div>
-        {% if current_user.user_role > 1 %}
-            <a class="btn btn-primary" href="{{ url_for('edit.organization', uid=entry.uid) }}">Edit</a>
-        {% endif %}
-    </div>
 </div>
 
 <div class="border rounded p-3">
@@ -33,6 +28,10 @@
         {% if entry.entry_notes %}
         <dt class="col-sm-3">Notes</dt>
         <dd class="col-sm-9">{{ entry.notes }}</dd>
+        {% endif %}
+        {% if entry.reviewed_by %}
+        <dt class="col-sm-3">Reviewed By</dt>
+        <dd class="col-sm-9">{{ entry.reviewed_by.get('user_displayname') }}</dd>
         {% endif %}
         
     </dl>
