--- a/flaskinventory/templates/edit/editform.html
+++ b/flaskinventory/templates/edit/editform.html
@@ -13,7 +13,7 @@
             
         </fieldset>
         <div class="form-group mb-3">
-            {{ form.submit(class="btn btn-outline-info my-4") }}
+            {{ form.submit(class="btn btn-primary my-4") }}
         </div>
     </form>
 <script>
