--- a/flaskinventory/templates/guides/resources.html
+++ b/flaskinventory/templates/guides/resources.html
@@ -37,6 +37,7 @@ All resources are curated by the WP3 Team and the list is updated irregularly.
 - [Czech Public Register](https://or.justice.cz/ias/ui/rejstrik): Information about companies, associations, trade unions, etc. (Czech Republic)
 - [KEK-Online](https://www.kek-online.de/service/verlinkungen): Ownership database of news sources (Germany)
 - [Hungarian Business Register](https://www.e-cegjegyzek.hu/): Company Register, information on date of incorporation, subsidiaries, etc (Hungary)
+- [Media Ownership Ireland](http://mediaownership.ie/): Initiative of the Broadcasting Authority of Ireland provides a structured and searcheable reference database of Irish media outlets (Ireland)
 - [Find and update company information](https://find-and-update.company-information.service.gov.uk/): Company registry, lookup financial statements, date of incorporation, ownerships of companies (United Kingdom)
 
 ## Press Councils
