--- a/flaskinventory/templates/view/elements/detail_organization.html
+++ b/flaskinventory/templates/view/elements/detail_organization.html
@@ -51,7 +51,7 @@
                     {% if 'Rejected' not in source.get('dgraph.type') %}
                     <p class="card-text"><a href="{{ url_for('view.view_source', unique_name=source.unique_name) }}">{{ source.name }} ({{ source.channel.name }})</a></p>
                     {% else %}
-                    <p class="card-text text-muted">{{ source.name }} ({{ source.channel.name }}) - rejected entry</p>
+                    <p class="card-text text-muted" title="UID: <{{ source.uid }}>">{{ source.name }} ({{ source.channel.name }}) - rejected entry</p>
                     {% endif %}
                 {% endfor %} 
             {% else %}
