#27 added circulation for greece

--- a/flaskinventory/templates/guides/resources.html
+++ b/flaskinventory/templates/guides/resources.html
@@ -21,6 +21,7 @@ All resources are curated by the WP3 Team and the list is updated irregularly.
 - [Danske Medier](https://danskemedier.dk/branchefakta/medieforbrug/oplagskontrol/): Information about media circulation and reach (Denmark)
 - [Media Audit Finland](https://mediaauditfinland.fi/): Information about media circulation and reach (Finland)
 - [IVW](https://www.ivw.de/): Circulation of print media (Germany)
+- [EIHEA](https://www.eihea.gr/eihea.php?contentid=164) Circulation information on print media (Greece)
 - [ADS](https://www.adsnotizie.it/): Circulation of media (Italy)
 
 ## Media Organizations and Ownership
