#88 added option to Add and Edit routes

--- a/flaskinventory/templates/add/newsource.html
+++ b/flaskinventory/templates/add/newsource.html
@@ -226,6 +226,7 @@
                         <option value="weekly">Once a week</option>
                         <option value="twice a month">Twice a month</option>
                         <option value="monthly">Monthly</option>
+                        <option value="less than monthly">Less frequent than monthly</option>
                         <option value="none">Don't know</option>
                     </select>
             <div id="publication-cycle-feedback"></div>
