#91 added to changelog

--- a/flaskinventory/templates/main/about.html
+++ b/flaskinventory/templates/main/about.html
@@ -33,7 +33,7 @@ In case some technical aspect is not working you can raise an issue in our [gith
 ### 07 Feb 2022
 
  - News Sources: added option for publication cycles that are less frequent than monthly
-
+ - News Sources: user comments on websites are now captured in two separate variables: one asking for the presence of user generated comments in general, the second one whether an account is required to leave comments.
         {% endfilter %}
 </div>
 </div>
