#94 changed sanitizer and input forms

--- a/flaskinventory/templates/add/newsource.html
+++ b/flaskinventory/templates/add/newsource.html
@@ -81,7 +81,7 @@
                             </label>
                 </div>
                 <div class="form-check">
-                    <input class="form-check-input" type="radio" name="transcript_kind" id="transcript_kind4" value="none" aria-describedby="transcript-kind-feedback">
+                    <input class="form-check-input" type="radio" name="transcript_kind" id="transcript_kind4" value="NA" aria-describedby="transcript-kind-feedback">
                     <label class="form-check-label" for="transcript_kind4">
                                 Don't know
                             </label>
@@ -244,7 +244,7 @@
                         <option value="twice a month">Twice a month</option>
                         <option value="monthly">Monthly</option>
                         <option value="less than monthly">Less frequent than monthly</option>
-                        <option value="none">Don't know</option>
+                        <option value="NA">Don't know</option>
                     </select>
             <div id="publication-cycle-feedback"></div>
         </div>
@@ -313,7 +313,7 @@
                         </label>
             </div>
             <div class="form-check">
-                <input class="form-check-input" aria-describedby="geographic-scope-feedback" type="radio" required name="geographic_scope" id="geographic_scope4" value="none">
+                <input class="form-check-input" aria-describedby="geographic-scope-feedback" type="radio" required name="geographic_scope" id="geographic_scope4" value="NA">
                 <label class="form-check-label" for="geographic_scope4">
                             Don't know
                         </label>
@@ -390,7 +390,7 @@
                             </label>
             </div>
             <div class="form-check">
-                <input class="form-check-input" type="radio" name="payment_model" id="payment_model4" value="none" aria-describedby="payment-model-feedback" required>
+                <input class="form-check-input" type="radio" name="payment_model" id="payment_model4" value="NA" aria-describedby="payment-model-feedback" required>
                 <label class="form-check-label" for="payment_model4">
                                 Don't know
                             </label>
@@ -429,7 +429,7 @@
             </div>
             
             <div class="form-check" id="form-check-contains-ads-4">
-                <input class="form-check-input" type="radio" name="contains_ads" id="contains_ads4" value="none" aria-describedby="contains-ads-feedback" required>
+                <input class="form-check-input" type="radio" name="contains_ads" id="contains_ads4" value="NA" aria-describedby="contains-ads-feedback" required>
                 <label class="form-check-label" for="contains_ads4">
                                 Don't know
                             </label>
@@ -530,7 +530,7 @@
                             </label>
             </div>
             <div class="form-check">
-                <input class="form-check-input" type="radio" name="channel_epaper" id="channel_epaper4" value="none" aria-describedby="channel-epaper-feedback">
+                <input class="form-check-input" type="radio" name="channel_epaper" id="channel_epaper4" value="NA" aria-describedby="channel-epaper-feedback">
                 <label class="form-check-label" for="channel_epaper4">
                                 Don't know
                             </label>
